dataset1235/2025-2/1153765216/users/3700556413/executions/2747719322_3921830315.log
== SUBMISSION (2025-08-21 18:35:36)
-- CODE: 
gasolina = 2,86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + serviço
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:34:02)
-- CODE: 
gasolina = 2,86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + servico
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:36:29)
-- CODE: 
gasolina = 2.86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + servico
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
informe a qtd de litros abastecidos: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
informe a qtd de litros abastecidos: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
informe a qtd de litros abastecidos: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
informe a qtd de litros abastecidos: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
informe a qtd de litros abastecidos: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
informe a qtd de litros abastecidos: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:36:02)
-- CODE: 
gasolina = 2.86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + serviço
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:34:46)
-- CODE: 
gasolina = 2,86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + servico
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:34:00)
-- CODE: 
gasolina = 2,86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + servico
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + servico
               ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:36:04)
-- CODE: 
gasolina = 2.86
servico = 50.00
litros = float(input("informe a qtd de litros abastecidos: "))
formula = (litros*gasolina) + serviço
total = formula + formula*(34/100)
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula = (litros*gasolina) + serviço
                                  ^^^^^^^
NameError: name 'serviço' is not defined. Did you mean: 'servico'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
